<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/imageButton1"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:padding="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/image_button" />

            <EditText
                android:id="@+id/name_edittext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/name_textview_hint" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp" >

            <Button
                android:id="@+id/bracelet_selection_button"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/bracelet_selection" />

            <TextView
                android:id="@+id/bluetooth_state_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/not_connected_state"
                android:textSize="18sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/server_address_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:ems="10"
            android:hint="@string/server_address_textview_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/wifi_selection_button"
                android:layout_width="130dp"
                android:layout_height="100dp"
                android:layout_marginLeft="10dp"
                android:text="@string/wifi_selection" />

            <TextView
                android:id="@+id/wifi_state_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/not_connected_state"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>